# InterconnectIO_Master

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  raspberrypi-swd.cfg
firmware/: CMakeLists.txt  README.md  master.c  pico_lib2_import.cmake
firmware/IO_master/: CMakeLists.txt  fts_scpi.c  functadv.c  i2c_com.c  master.c  test.c
firmware/IO_master/include/: fts_scpi.h  functadv.h  i2c_com.h  master.h  scpi_user_config.h  test.h  userconfig.h.in
firmware/IO_master/lib/scpi-parser/libscpi/src/: error.c
firmware/IO_master/lib/scpi-parser/libscpi/test/: test_parser.c
firmware/IO_master/pico_lib2/: CMakeLists.txt
firmware/IO_master/pico_lib2/src/: CMakeLists.txt
firmware/IO_master/pico_lib2/src/dev/: CMakeLists.txt
firmware/IO_master/pico_lib2/src/dev/dev_24lc32/: CMakeLists.txt  dev_24lc32.c  dev_24lc32.h
firmware/IO_master/pico_lib2/src/dev/dev_ds2431/: CMakeLists.txt  dev_ds2431.c  dev_ds2431.h
firmware/IO_master/pico_lib2/src/dev/dev_ina219/: CMakeLists.txt  dev_ina219.c  dev_ina219.h
firmware/IO_master/pico_lib2/src/dev/dev_mcp4725/: dev_mcp4725.c  dev_mcp4725.h
firmware/IO_master/pico_lib2/src/dev/dev_mcp472x/: CMakeLists.txt  dev_mcp4725.c  dev_mcp4725.h
firmware/IO_master/pico_lib2/src/sys/: CMakeLists.txt  sys_adc.c  sys_i2c.c  sys_spi.c  sys_spi_old.c
firmware/IO_master/pico_lib2/src/sys/include/: sys_adc.h  sys_i2c.h  sys_spi.h  sys_spi_old.h  sys_uart.h
firmware/build_old/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
firmware/build_old/.cmake/api/v1/reply/: cache-v2-f0c40d7225bbc85e8b6b.json  (+7 more)
firmware/build_old/IO_master/: Makefile  cmake_install.cmake  master.dis  master.elf  master.elf.map  master.hex  master.uf2
firmware/build_old/IO_master/include/: UserConfig.h  userconfig.h
firmware/build_old/IO_master/pico_lib2/: Makefile  cmake_install.cmake
firmware/build_old/IO_master/pico_lib2/src/: Makefile  cmake_install.cmake
firmware/build_old/IO_master/src/: Makefile  cmake_install.cmake
firmware/build_old/IO_master/src/dev/: Makefile  cmake_install.cmake
firmware/build_old/IO_master/src/sys/: Makefile  cmake_install.cmake
firmware/build_old/elf2uf2/: CMakeCache.txt  Makefile  cmake_install.cmake
firmware/build_old/elf2uf2/boot_uf2_headers/: Makefile
firmware/build_old/pico-sdk/: Makefile  cmake_install.cmake
firmware/build_old/pico-sdk/docs/: Makefile
firmware/build_old/pico-sdk/src/: Makefile  cmake_install.cmake
firmware/build_old/pico-sdk/src/common/: Makefile  cmake_install.cmake
firmware/build_old/pico-sdk/src/rp2040/: Makefile  cmake_install.cmake
firmware/build_old/pico-sdk/src/rp2_common/: Makefile  cmake_install.cmake
firmware/build_old/pico-sdk/tools/: Makefile
firmware/build_old/pico_lib2/: Makefile  cmake_install.cmake
firmware/build_old/pico_lib2/src/: Makefile  cmake_install.cmake
firmware/build_old/pico_lib2/src/dev/: Makefile  cmake_install.cmake
firmware/build_old/pico_lib2/src/sys/: Makefile  cmake_install.cmake
firmware/build_old/pioasm/: CMakeCache.txt  Makefile  cmake_install.cmake  pioasm
firmware/documentation/doxygen/html/: annotated.html  annotated_dup.js  classes.html  dev__24lc32_8h_source.html  dev__ds2431_8c.html  dev__ds2431_8c.js  dev__ds2431_8c__incl.map  dev__ds2431_8c__incl.md5  dev__ds2431_8h.html  dev__ds2431_8h.js  dev__ds2431_8h__dep__incl.map  dev__ds2431_8h__dep__incl.md5  dev__ds2431_8h_source.html  dev__ina219_8c.html  dev__ina219_8c.js  dev__ina219_8c__incl.map  dev__ina219_8c__incl.md5  dev__ina219_8h.html  dev__ina219_8h.js  dev__ina219_8h__dep__incl.map  dev__ina219_8h__dep__incl.md5  dev__ina219_8h__incl.map  dev__ina219_8h__incl.md5  dev__ina219_8h_source.html  dev__mcp4725_8h.html  dev__mcp4725_8h.js  dev__mcp4725_8h__dep__incl.map  dev__mcp4725_8h__dep__incl.md5  dev__mcp4725_8h__incl.map  dev__mcp4725_8h__incl.md5  dev__mcp4725_8h_source.html  dir_000001_000006.html  dir_000004_000015.html  dir_000005_000015.html  dir_000007_000015.html  dir_000008_000015.html  dir_000009_000014.html  dir_000010_000014.html  dir_000012_000014.html  dir_000013_000010.html  (+277 more)
firmware/documentation/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_10.js  defines_11.js  defines_12.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  (+62 more)
firmware/documentation/doxygen/latex/: annotated.tex  dev__24lc32_8h_source.tex  dev__ds2431_8c.tex  dev__ds2431_8c__incl.md5  dev__ds2431_8h.tex  dev__ds2431_8h__dep__incl.md5  dev__ds2431_8h_source.tex  dev__ina219_8c.tex  dev__ina219_8c__incl.md5  dev__ina219_8h.tex  dev__ina219_8h__dep__incl.md5  dev__ina219_8h__incl.md5  dev__ina219_8h_source.tex  dev__mcp4725_8h.tex  dev__mcp4725_8h__dep__incl.md5  dev__mcp4725_8h__incl.md5  dev__mcp4725_8h_source.tex  files.tex  fts__scpi_8c.tex  fts__scpi_8c__incl.md5  fts__scpi_8h.tex  fts__scpi_8h__dep__incl.md5  fts__scpi_8h__incl.md5  fts__scpi_8h_source.tex  functadv_8c.tex  functadv_8c__incl.md5  functadv_8h.tex  functadv_8h__dep__incl.md5  functadv_8h__incl.md5  functadv_8h_source.tex  i2c__com_8c.tex  i2c__com_8c__incl.md5  i2c__com_8h.tex  i2c__com_8h__dep__incl.md5  i2c__com_8h__incl.md5  i2c__com_8h_source.tex  master_8c.tex  master_8c__incl.md5  master_8h.tex  master_8h__dep__incl.md5  (+52 more)
firmware/src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_bad  fts_scpi.c  functadv.c  i2c_com.c  master.c  scpi_i2c.c  scpi_spi.c  scpi_uart.c  test.c
firmware/src/include/: fts_scpi.h  functadv.h  i2c_com.h  master.h  scpi_i2c.h  scpi_spi.h  scpi_uart.h  scpi_user_config.h  test.h  userconfig.h.in
firmware/src/pico_lib2/: CMakeLists.txt
firmware/src/pico_lib2/src/: CMakeLists.txt
firmware/src/pico_lib2/src/dev/: CMakeLists.txt
firmware/src/pico_lib2/src/sys/: CMakeLists.txt  sys_adc.c  sys_i2c.c  sys_uart.c
(+111 files in other folders)
